<resources>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 리뷰 -->
    <string name="check">확인</string>
    <string name="nickname">별명</string>
    <string name="password">비밀번호6자리</string>
    <string name="review_content">리뷰 내용</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="cancel">취소</string>
    <string name="password_error">비밀번호 불일치</string>
    <string name="review_error">리뷰작성 실패</string>
    <string name="review_guide">닉네임과 비밀번호는 필수입니다.(비밀번호는 6자리)</string>
    <string name="cancel_album">사진선택 취소</string>

    <string name="detail_title">제목</string>
    <string name="detail_year">개봉연도 (제작연도)</string>
    <string name="detail_rank">등수 (랭크 변화) / 신규진입 여부</string>
    <string name="detail_audit">관객수</string>
    <string name="detail_runtime">상영시간</string>
    <string name="detail_genre">장르 / 심의번호</string>
    <string name="detail_director">감독명</string>
    <string name="detail_plot">영화 줄거리</string>
    <string name="detail_rating">별점 추가하기</string>
    <string name="review_date">리뷰시간</string>


</resources>